# SuperResShootout

./: .gitignore  README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/org/infil00p/superresstats/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  MobileCallGuard.h  Model.cpp  Model.h  ORTSuperRes.cpp  ORTSuperRes.h  PyTorchSuperRes.cpp  PyTorchSuperRes.h  SuperRes.cpp  SuperRes.h  TFSuperRes.cpp  TFSuperRes.h  native-lib.cpp
app/src/main/java/org/infil00p/superresstats/: AssetHandler.kt  MainActivity.kt  Result.kt  ResultParser.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/org/infil00p/superresstats/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
jupyter/: README.md  Super Resolution.ipynb
